# mlops_sessions_iti

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci_cd.yml
session_1/: .dockerignore  Dockerfile  README.md  bad_notebook_example.ipynb  docker-compose.yml  fastapi_example.py  litestar_example.py  msgpack_example.py  pyproject.toml  pytorch_to_onnx.py
session_1/docs/: info
session_1/src/: model.py
session_1/tests/: test_model.py
session_2/: .dockerignore  .env.gcs.example  .env.s3.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.gcs.yml  docker-compose.s3.yml  docker-compose.yml  dvc.yaml  mflow_example.py  mlflow_example.py  mlflow_gcs_registry_example.py  mlflow_modelregiestry_example.py  mlflow_s3_registry_example.py  mlflowclient_example.py  pyproject.toml  serve.py  w&b_example.py  wandb_example.py
session_2/.dvc/: config
session_2/.github/workflows/: ci.yml
session_2/config/: config.yaml  dvc.yaml
session_2/data/raw/: .gitignore  rides.csv  rides.csv.dvc
session_2/docs/: info.md
session_2/infra/: commands.md  main.tf  variables.tf
session_2/src/: evaluate.py  prepare.py  train.py
session_2/tests/: test_config.py  test_integration.py  test_prepare.py  test_train.py
session_3/: .env.example  .gitignore  Dockerfile  README.md  ab_testing.py  bentoml_example.py  consumer.py  docker-compose.yaml  locustfile.py  main_streaming_inference.py  nginx.conf  pyproject.toml  requirements.txt  serve_dl_serving_example.py  serve_llm_vllm_example.py  torch_serve.py
session_3/Dags/: dag_example.py  example_1.py
session_3/infra/: .gitignore  main.tf  outputs.tf  startup.sh  terraform.tfvars.example  variables.tf  versions.tf
session_3/models/: rf_model.pkl
session_3/serving_levels/: README.md  bench.py  bentofile.yaml  level_0_notebook.py  level_1_fastapi.py  level_2_batching.py  level_3_optimize.py  level_4_bentoml_service.py  level_4_save_model.py  level_4_triton_export.py  level_5_vllm_llm.py
session_3/serving_levels/level_4_triton/: README.md
session_3/serving_levels/level_4_triton/model_repository/resnet50/: config.pbtxt
session_3/src/: batch_scoring.py  config.py  prepare.py  register_model.py  train.py
session_4/: .env.example  .gitignore  P_G_monitoring.py  README.md  automated_drift_report.py  data_drift_evidently.py  docker-compose.yaml  embedding_drift.py  guardrails_example.py  hinkley_adwin.py  label_predicion_drift.py  langfuse_example.py  ollama_langfuse_rag.py  pyproject.toml  ragas_example.py
session_4/monitoring/grafana/dashboards/: model-monitoring.json
session_4/monitoring/grafana/provisioning/dashboards/: dashboards.yml
session_4/monitoring/grafana/provisioning/datasources/: prometheus.yml
session_4/monitoring/prometheus/: alert_rules.yml  prometheus.yml
