[project]
name = "ride-duration-mlflow"
version = "0.1.0"
description = "Session 2 — train a ride-duration model and track it with MLflow."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=2.12",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    # Used by the DVC pipeline stages (prepare / train / evaluate):
    "pandas>=2.0",
    "pyarrow>=15",      # parquet engine
    "pyyaml>=6",        # config/config.yaml loader
    "joblib>=1.3",      # model (de)serialization
]

[project.optional-dependencies]
# Test/dev tooling. Install with:
#   pip install -e ".[dev]"
dev = [
    "pytest>=8.0",
    "pytest-cov>=5",    # `pytest --cov` in CI
    "ruff>=0.4",        # lint + format (see .pre-commit-config.yaml / ci.yml)
]
# DVC pipeline runner + S3 remote (matches infra/ Terraform bucket). Install with:
#   pip install -e ".[dvc]"
dvc = [
    "dvc[s3]>=3.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
