[project]
name = "ride-duration-mlflow"
version = "0.1.0"
description = "Session 2 — train a ride-duration model and track it with MLflow."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=2.12",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    # Used by the DVC pipeline stages (prepare / train / evaluate):
    "pandas>=2.0",
    "pyarrow>=15",      # parquet engine
    "pyyaml>=6",        # config/config.yaml loader
    "joblib>=1.3",      # model (de)serialization
]

[project.optional-dependencies]
# Test/dev tooling. Install with:
#   pip install -e ".[dev]"
dev = [
    "pytest>=8.0",
    "pytest-cov>=5",    # `pytest --cov` in CI
    "ruff>=0.4",        # lint + format (see .pre-commit-config.yaml / ci.yml)
    "pre-commit>=3.7",  # git hook runner (see repo-root .pre-commit-config.yaml)
    # The serving stack + httpx are needed by tests/test_integration.py, which
    # exercises serve.py through FastAPI's TestClient. Pulling the [serve] extra
    # keeps a single source of truth for fastapi/uvicorn versions.
    "ride-duration-mlflow[serve]",
    "httpx>=0.27",      # transport backing fastapi.testclient.TestClient
]
# DVC pipeline runner + S3 remote (matches infra/ Terraform bucket). Install with:
#   pip install -e ".[dvc]"
dvc = [
    "dvc[s3]>=3.0",
]
# DVC pipeline runner + GCS remote (gs://mlops-session2-iti/dvc-store). Install with:
#   pip install -e ".[gcs]"
gcs = [
    "dvc[gs]>=3.0",
]
# Inference serving stack (see serve.py / Dockerfile). Install with:
#   pip install -e ".[serve]"
serve = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
# Weights & Biases experiment tracking (see wandb_example.py). Install with:
#   pip install -e ".[wandb]"
wandb = [
    "wandb>=0.17",
    "matplotlib>=3.8",  # diagnostic plots logged as wandb.Image artifacts
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the project root on sys.path so tests can `import serve` (a top-level
# script, not part of the installed `src` package). `src` is importable via the
# editable install; serve.py is not, so it needs this.
pythonpath = ["."]
